--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -63,7 +63,7 @@
 		margin: 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2, h3, h4, h5, h6, span {
 		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
 		line-height: 1.65;
